--- a/linux/ubuntu/常用命令.md
+++ b/linux/ubuntu/常用命令.md
@@ -1,1 +1,69 @@
-* 查看 软件是否启用 `ps -aux | grep ssh`
+##### 目录
+
+* `cat 文件路径` 查看文件内容
+
+* `cd 路径` 切换目录
+
+* `cp 拷贝的文件路径 目标的文件路径` 拷贝文件到目标路径
+
+* `df` 磁盘空间检查命令
+
+* `du [路径] [option]` 查看路径下文件大小
+    * `du [路径] -s` 不显示子目录文件占用大小
+    * `du [路径] -h` 大小添加单位
+
+* `file 文件名` 查看文件类型
+
+* `find [option] 文件名` 查找文件命令
+    * `find -name 文件名` 根据文件名查找
+
+* `grep [option] "内容字符串" 路径` 查找文件内容
+    * `grep -r "内容字符串" 路径` 采用递归方式查找文件内容
+    * `grep -n "内容字符串" 路径` 找到文件内容后显示行号
+    * `grep -i "内容字符串" 路径` 找到文件内容,忽略大小写
+
+* `ls [option]` 目录信息查看命令-查看目录文件
+    * `ls -a` 查看隐藏文件
+    * `ls -l` 以列表形式呈现
+
+* `mkdir 文件目录` 创建文件目录
+
+* `mv 需要移动的文件路径 目标的文件路径` 把需要移动的文件移到到目标文件路径 - 可以用作重命名
+
+* `pwd` 查看当前文件路径
+
+* `rm [option] 文件路径` 删除文件
+    * `rm -r 文件路径` 使用递归方式删除文件夹及以内的所有文件
+    * `rm -f 文件路径` 强制删除文件
+* `rmdir 文件目录` 删除文件目录
+
+* `touch 文件路径` 创建文件
+
+##### 系统相关
+
+* `clear` 清空显示
+
+* `man 命令名` 查看命令详细说明
+
+* `ps [option]` 查看系统运行进程
+    * `ps -aux | grep 软件名` 查看 软件是否启用
+
+* `poweroff` 关机
+
+* `sudo 命令` 使用超级权限执行命令
+    * `sudo su` 切换为超级管理员root
+    * `sudo su 用户名` 切换为用户
+
+* `uname [option]` 查看系统信息
+    * `uname -a` 查看系统全部信息
+    * `uname -m` 显示电脑类型
+    * `uname -n` 显示在网络上的主机名称
+    * `uname -r` 显示操作系统发行编号
+    * `uname -s` 显示操作系统名称
+    * `uname -v` 显示操作系统版本 
+
+* `reboot` 重启系统
+
+* `top` 查看当前系统实时运行状态
+
+* `sync` 数据同步写入磁盘
