--- a/linux/ubuntu/常用命令.md
+++ b/linux/ubuntu/常用命令.md
@@ -11,6 +11,7 @@
 * `du [路径] [option]` 查看路径下文件大小
     * `du [路径] -s` 不显示子目录文件占用大小
     * `du [路径] -h` 大小添加单位
+    * `du [路径] --max-depth=n` 查看文件的层数n
 
 * `file 文件名` 查看文件类型
 
@@ -43,6 +44,14 @@
 
 * `clear` 清空显示
 
+* `fdisk -l` 查看磁盘分区
+    * `fdisk 磁盘路径` 列出分区操作 按 m 获取帮助
+        * `d` 删除磁盘分区
+        * `n` 添加一个分区
+        * `p` 查看分区
+        * `w` 写入操作
+* `mkfs -t vfat /dev/sdb1` 将第一个分区使用 fat 格式进行格式化
+
 * `man 命令名` 查看命令详细说明
 
 * `ps [option]` 查看系统运行进程
@@ -62,8 +71,42 @@
     * `uname -s` 显示操作系统名称
     * `uname -v` 显示操作系统版本 
 
+* `umount 挂载的磁盘路径 [option]` 卸载挂载的磁盘
+    * `umount 挂载的磁盘路径 -f` 强制卸载挂载的磁盘
+* `mount [option] dev/磁盘分区 想要挂载的路径` 挂载磁盘到路径
+    * `mount -o iocharset=utf8 dev/磁盘分区 想要挂载的路径` 解决中文文件名乱码问题
+
 * `reboot` 重启系统
 
 * `top` 查看当前系统实时运行状态
 
 * `sync` 数据同步写入磁盘
+
+##### 安装软件
+
+* `apt-get install 软件名` 通过 apt 安装软件
+
+* `dpkg -i xxx.deb` 通过 deb 文件安装软件
+
+* 源码编译安装
+    1. `make` 编译make
+    2. `make install` 安装软件
+
+##### 压缩
+
+* `gzip [option] 文件路径` 文件压缩命令
+    * `gzip 文件路径` 压缩文件
+    * `gzip -d 压缩文件路径` 解压缩
+    * `gzip -r 文件夹路径` 对文件夹里面的文件进行压缩
+
+* `bzip2 [option] 文件路径` 文件压缩命令
+    * `bzip2 -z 文件路径` 压缩文件
+    * `bzip2 -d 压缩文件路径` 解压缩
+
+* `tar [option] 打包后文件路径 打包的文件路径` 文件压缩命令 常用 `-vczf -vxzf`
+    * `-f` 对文件夹及其下的文件作用
+    * `-c` 打包文件
+    * `-x` 解包文件 解包时不写 打包的文件路径
+    * `-j` 使用 bzip2 压缩格式
+    * `-z` 使用 gzip 压缩格式
+    * `-v` 打印执行过程
