用户组及文件权限 linux

--- a/linux/ubuntu/常用命令.md
+++ b/linux/ubuntu/常用命令.md
@@ -110,3 +110,27 @@
     * `-j` 使用 bzip2 压缩格式
     * `-z` 使用 gzip 压缩格式
     * `-v` 打印执行过程
+
+    ##### 用户组
+
+    * `adduser 用户名` 添加用户
+    * `finger 用户名` 用户查询
+    * `passwd 用户名` 修改用户密码
+    * `deluser 用户名` 删除用户
+
+    * `addgroup 用户组名` 添加用户组
+    * `groups 用户组名` 显示组内用户
+    * `delgroup 用户组名` 删除用户组
+
+    ##### 文件权限
+
+    * `r4读 w2写 x1执行` 权限代表的数字 7
+    
+    * `chmod` 修改文件权限命令
+        * `chmod 777 文件名` 添加所有权限
+        * `chmod -R 777 文件夹` 添加所有权限到整个文件夹下所有文件
+    * `chown` 修改文件所属用户
+        * `chown .root 文件名` 把该文件的用户组改为 root
+        * `chown root 文件名` 把该文件的用户改为 root
+        * `chown root.root 文件名` 把该文件的用户用户组改为 root
+        * `chown -R root.root 文件夹` 把该文件夹下所有文件的用户用户组改为 root
