--- a/linux/ubuntu/常用命令.md
+++ b/linux/ubuntu/常用命令.md
@@ -4,7 +4,8 @@
 
 * `cd 路径` 切换目录
 
-* `cp 拷贝的文件路径 目标的文件路径` 拷贝文件到目标路径
+* `cp [option] 拷贝的文件路径 目标的文件路径` 拷贝文件到目标路径
+    * `cp -d 拷贝的文件路径 目标的文件路径` 拷贝文件到目标路径(保持软连接)
 
 * `df` 磁盘空间检查命令
 
@@ -26,6 +27,7 @@
 * `ls [option]` 目录信息查看命令-查看目录文件
     * `ls -a` 查看隐藏文件
     * `ls -l` 以列表形式呈现
+    * `ls -i` 查看文件的 inode 硬连接编号
 
 * `mkdir 文件目录` 创建文件目录
 
@@ -111,26 +113,34 @@
     * `-z` 使用 gzip 压缩格式
     * `-v` 打印执行过程
 
-    ##### 用户组
+##### 用户组
 
-    * `adduser 用户名` 添加用户
-    * `finger 用户名` 用户查询
-    * `passwd 用户名` 修改用户密码
-    * `deluser 用户名` 删除用户
+* `adduser 用户名` 添加用户
+* `finger 用户名` 用户查询
+* `passwd 用户名` 修改用户密码
+* `deluser 用户名` 删除用户
 
-    * `addgroup 用户组名` 添加用户组
-    * `groups 用户组名` 显示组内用户
-    * `delgroup 用户组名` 删除用户组
+* `addgroup 用户组名` 添加用户组
+* `groups 用户组名` 显示组内用户
+* `delgroup 用户组名` 删除用户组
 
-    ##### 文件权限
+##### 文件权限
 
-    * `r4读 w2写 x1执行` 权限代表的数字 7
-    
-    * `chmod` 修改文件权限命令
-        * `chmod 777 文件名` 添加所有权限
-        * `chmod -R 777 文件夹` 添加所有权限到整个文件夹下所有文件
-    * `chown` 修改文件所属用户
-        * `chown .root 文件名` 把该文件的用户组改为 root
-        * `chown root 文件名` 把该文件的用户改为 root
-        * `chown root.root 文件名` 把该文件的用户用户组改为 root
-        * `chown -R root.root 文件夹` 把该文件夹下所有文件的用户用户组改为 root
+* `r4读 w2写 x1执行` 权限代表的数字 7
+
+* `chmod` 修改文件权限命令
+    * `chmod 777 文件名` 添加所有权限
+    * `chmod -R 777 文件夹` 添加所有权限到整个文件夹下所有文件
+* `chown` 修改文件所属用户
+    * `chown .root 文件名` 把该文件的用户组改为 root
+    * `chown root 文件名` 把该文件的用户改为 root
+    * `chown root.root 文件名` 把该文件的用户用户组改为 root
+    * `chown -R root.root 文件夹` 把该文件夹下所有文件的用户用户组改为 root
+
+##### 连接文件
+
+* `ln [option] 源文件 生成的连接文件` 创建硬连接文件
+    * 硬连接文件创建后, 相应的任何文件被修改, 所有硬连接的所有文件都会被修改
+    * 硬连接文件创建后, 任何源文件和连接文件被删除, 对其他文件不影响
+
+    * `ln -s 源文件绝对路径 生成的连接文件` 创建软连接文件(快捷方式)
