--- a/linux/uboot/常用命令.md
+++ b/linux/uboot/常用命令.md
@@ -33,6 +33,17 @@
 * `tftp 0x30000000 文件名` 从ftp服务器下载文件到地址处(uboot地址 从 0x30000000 - 0x50000000)
     * 下载之前 需要把配置文件的 serverip 设置成下载服务器的ip
 
+* `fastboot` 用来快速下载镜像的一个命令, 同时还是 windows 上的软件
+    * uboot 端
+        * `fastboot` 启动 fastboot 并显示分区
+    * windows 端 (必须先链接 uboot 端)
+        * `fastboot devices` 查看链接的设备
+        * `fastboot flash xxx` 烧录命令
+            * `fastboot flash bootloader uboot路径.bin` 烧 uboot
+            * `fastboot flash kernel 内核路径`          烧 kernel
+            * `fastboot flash system 系统镜像路径`      烧 rootfs
+        * `fastboot reboot` 重启 uboot 端 uboot
+
 ##### 符号
 
 * `''` 单引号 - 参数有空格的需要包含在分好内连成一个参数
