--- a/linux/uboot/常用命令.md
+++ b/linux/uboot/常用命令.md
@@ -36,7 +36,7 @@
 * `fastboot` 用来快速下载镜像的一个命令, 同时还是 windows 上的软件
     * uboot 端
         * `fastboot` 启动 fastboot 并显示分区
-    * windows 端 (必须先链接 uboot 端)
+    * windows 端 (必须先链接 uboot 端) - 需要安装驱动
         * `fastboot devices` 查看链接的设备
         * `fastboot flash xxx` 烧录命令
             * `fastboot flash bootloader uboot路径.bin` 烧 uboot
