--- a/嵌入式/x210 烧卡.md
+++ b/嵌入式/x210 烧卡.md
@@ -47,3 +47,7 @@
     * 第二步：确保 DNW 的地址为 0x47700000，按下 u. 如果地址不是 0x47700000，点击 DNW 的 Configuration，选择 Options，在最下面的 Download Address 一栏设置为 0x47700000 即可
     * 第三步：点击 DNW 的 USB Port->Uboot，选择 erase.nb0 文件，烧写完成后，即清掉了 eboot，这时，我们就可以从 SD2 通道通过外部 SD 卡启动了。
 
+5. 烧启动 SD
+    * 读卡器插入 windows 然后使用 x210_Fusing_Tool.exe 把 uboot.bin 烧入 SD 卡中
+    * 将 SD 卡插入 x210 开发版 2号槽中开机启动
+    * 开发板启动时会先使用 inand 的 uboot, 如果被破坏将使用 SD 卡中的 uboot
